# ovsrpro

./: .gitignore  CMakeLists.txt  Dockerfile  Findexternpro.cmake  Findovsrpro.cmake  Findscript.cmake.in  README.md  building.md  codeowners  opfunmac.cmake  opopts.cmake.in  ovsrpro.spec.in  ovsrproconf.sh.in  ovsrprolibs.in  readme.md  removeovsrproconf.sh  removeovsrprolibs  useop-ovsrpro.cmake
.devcontainer/: Dockerfile  devcontainer.json
Utils/: README
patches/: glew-Makefile  glew_static.vcxproj  hdf5-HDF518config.cmake  hdf5-windows-static-UserMacros.cmake  hdf5.patch  kerberos-libecho.c  kerberos-windows-Makefile.in  kerberos-windows-minimal-Makefile.in  kerberos-windows-static-win-pre.in  librdkafka-windows.patch  librdkafka.patch  novas.patch  openh264.patch  psql-win32-static.mak  psql-win32-top-level-static.mak  psql-win32error-static_patch.c  qt.conf  qt5-msvc-desktop-md.conf  qt5-msvc-desktop-mt.conf  qt5.patch  qwtconfig.pri.patch  zookeeper-mt_adapter-x64-fix.patch  zookeeper-win32-gettimeofday.c  zookeeper-winconfig.h  zookeeper-winconfig.patch  zookeeper-windows.patch  zookeeper-winport.c.patch  zookeeper-winport.h.patch  zookeeper.patch  zookeeper.sln  zookeeper.vcxproj
projects/: README.md  README_gen.md  cppzmq.cmake  ffmpeg.cmake  glew.cmake  hdf5.cmake  kerberos.cmake  librdkafka.cmake  novas.cmake  openh264.cmake  psql.cmake  qt5.cmake  qwt.cmake  zeromq.cmake  zookeeper.cmake
projects/use/: useop-cppzmq-config.cmake  useop-ffmpeg-config.cmake  useop-glew-config.cmake  useop-hdf5-config.cmake  useop-kerberos-config.cmake  useop-librdkafka-config.cmake  useop-novas-config.cmake  useop-openh264-config.cmake  useop-psql-config.cmake  useop-qt5-config.cmake  useop-qwt-config.cmake  useop-zeromq-config.cmake  useop-zookeeper-config.cmake  usexp-qt5-config.cmake
